lab1/Test/L1-A-13-82.output
Error Type A at Line 6
Error Type B at Line 8
Error Type A at Line 12
Error Type B at Line 22
Error Type B at Line 29
Error Type A at Line 30
Error Type A at Line 44
Error Type B at Line 48
Error Type B at Line 54
