lab1/Test/L1-A-13-82.cmm
float ;
int ;
int ;
int C ( ) {
}
%int MyaG68U85F7OVYd0_ut ( int M_RybKsJ , struct xP 
  {
}Kfb1w6PJUMldKvHsuwO ] ) {
  struct FjDVb1wWh89Jb kzB7PEcw_Bi ;
  while ( AoiWJiuYqAjtbUOPHvxi ) {
    if ( sAl0PcBHkaSqNH51lW )     if ( yUp_2 ) {
      int $EtQ0OIedNjU6lE2Ie9d , pxyfz_qJxxd9jfrKuQ 
        ;
{
      }      if ( Vs1 ) {
        while ( gc1wco8Jia5tIPTZIV )         while 
          ( An )         BEgkE2t6MKa2SDHC ;


        if ( _RZY9p )         qZ3SaRru ;

        NJG 1435374734 ;
      }else       if ( PY_fQxCO47WowT )       IaMeVIN6 
        ;
else       if ( NhmiSKpahLz6g0XmBSrp )       j ;
else       if ( th7Ms8rX1fWF6gL_pLU )       if ( Nu2ViAys7ZwL1x99WXa 
        ) {
        struct {
        }[ 418170190 ] = VB_qVadUNiwWwFLJ459 ;
'      }




    }else     QPjt ;

else     if ( xIyjSaC )     if ( ibrDgLJ1W5 )     return 
      VtcgrFLVN8zUc || zwFq8qgIQ - D1owp8T1jg98JaAHV / ! 
      JOblzkF [ jPfbBXf4vFaRLIw = pUFqx4l = GO1UJ5x2 = HR0qvsJzO_nItgmi 
      = rUgKTJSSStdoEs && pC8D5Pp7Tpw < y45G4Pyr + LMrz1vLf 
      ( _88_xVZAXvfZQl4ZLSK , _fFyR = k || fwF2WoqinS4BbHhEQvW 
      != ykpndWutnucX2 * d07ULdunwstQ5wf ( C46fbr || UqhVytjYtYnMuBYeR9 
      >= ( qnDxhDg2dc > Yghc84FfrPiEdFxroW8 - 801919306 
      == #! 508063307.708421006 ) ) ) . HREb628SBda52BjeBE 
      * qHLkpnZG ] <= - s6F5984t60qWRH7CbnxE ( ) ;


. 
  }
}
int BxaP67 
;
int 
int I , rjc0zp5PrwJA 

;
